admin, osha removal

--- a/app_admin/templates/admin_home.html
+++ b/app_admin/templates/admin_home.html
@@ -165,7 +165,7 @@
          <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-               <h6 class="m-0 font-weight-bold text-primary">Earnings Overview - {% now "F" %}</h6>
+               <h6 class="m-0 font-weight-bold text-primary">Earnings Overview - {% now "Y" %}</h6>
                <div class="dropdown no-arrow">
                   <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
                      aria-haspopup="true" aria-expanded="false">
@@ -414,7 +414,9 @@
 
                that.earnings.total = response.reduce((n, { total }) => n + parseFloat(total), 0).toFixed(2);
 
-               initEarningChart(response, 'ordersOverviewChart', 'Earnings', '$')
+               const thisYearOnly = response.filter(a=>a.year === year);
+
+               initEarningChart(thisYearOnly, 'ordersOverviewChart', 'Earnings', '$')
             });
          },
 
