--- a/app_public/templates/faq/faq.html
+++ b/app_public/templates/faq/faq.html
@@ -53,8 +53,8 @@
                                     </strong>
                                 </div>
                                 <div class="card-body">
-                                   We offer a variety of online courses,  Certified Safety Professional (BCSP) Exam Prep, OSHA Hazardous Waste Operations and Emergency Response (HAZWOPER), Confined Space Training, Emergency and Fire Safety, Construction Safety, 
-                                    Environmental Health and Safety, OSHA Construction Safety and Health, Safety Management, Scaffold Training, Fall Protection in Construction and many more please     
+                                   We offer a variety of online courses,  Certified Safety Professional (BCSP) Exam Prep, Hazardous Waste Operations and Emergency Response (HAZWOPER), Confined Space Training, Emergency and Fire Safety, Construction Safety, 
+                                    Environmental Health and Safety, Construction Safety and Health, Safety Management, Scaffold Training, Fall Protection in Construction and many more please     
                                     <a href="{% url 'courses_list' %}">
                                         <strong>click here</strong>
                                     </a>.
@@ -84,33 +84,7 @@
                             <!-- end card -->
                             
                             <!-- end card -->
-                            <div class="card mt-2">
-                                <div class="card-header">
-                                    <strong>
-                                        Where can I register for OSHA 10 course?
-                                    </strong>
-                                </div>
-                                <div class="card-body">
-                                    You can register for Occupational Safety and Health Administration, OSHA 10 here at Construction Safety Training, LLC. To view our OSHA 10 course, please
-                                    <a href="{% url 'student_registration' %}">
-                                        <strong>click here</strong>
-                                    </a>.
-                                </div>
-                            </div>
-                            <!-- end card -->
-                            <div class="card mt-2">
-                                <div class="card-header">
-                                    <strong>
-                                        Where can I register for OSHA 30 course?
-                                    </strong>
-                                </div>
-                                <div class="card-body">
-                                    You can register for Occupational Safety and Health Administration, OSHA 30 here at Construction Safety Training, LLC. To view our OSHA 30 course, please
-                                    <a href="{% url 'student_registration' %}">
-                                        <strong>click here</strong>
-                                    </a>.
-                                </div>
-                            </div>
+                           
                             <!-- end card -->
                         </div>
                     </div>
