--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -11,7 +11,7 @@ Best Safety Training and Certification Courses Online | pdhsafety.com
 
 {% block meta_desc %}
 {% if subject %} Best Price Online {{ subject.title }}
-OSHA Compliant  (Easy Access 24/7 On All Devices)
+  (Easy Access 24/7 On All Devices)
 Easy To Take Course Satisfaction Guarantee
 
 {% endif %}
