--- a/app_students/templates/certificate/certificate_template.html
+++ b/app_students/templates/certificate/certificate_template.html
@@ -206,11 +206,13 @@
          /* Page Definitions */
          @page WordSection1 {
              size: 11.0in 8.5in;
-             margin: 1.25in 1.5in;
+             margin: 0.25in 0.5in;
+            
          }
 
          div.WordSection1 {
              page: WordSection1;
+             border:4px solid #000;
          }
 
          /* List Definitions */
@@ -221,7 +223,7 @@
          ul {
              margin-bottom: 0;
          }
-         -->
+  
       </style>
    </head>
 
@@ -235,8 +237,8 @@
             cellpadding="0"
             style="border-collapse: collapse; margin: 43pt auto 0 auto"
          >
-            <tr style="page-break-inside: avoid; height: 418.55pt">
-               <td width="757" valign="top" style="width: 568.1pt; padding: 0in 5.4pt 0in 5.4pt; height: 418.55pt">
+            <tr style="page-break-inside: avoid; height: 518.55pt">
+               <td width="757" valign="top" style="width:668.1pt; padding: 0in 5.4pt 0in 5.4pt; height: 518.55pt">
                   <p class="MsoNormal" align="center" style="margin-right: 0.75pt; text-align: center; background: white">&nbsp;</p>
                   <p class="MsoNormal" align="center" style="margin-right: 0.75pt; text-align: center; background: white">&nbsp;</p>
                   <p class="Heading">
@@ -291,35 +293,27 @@
                   </p>
                   <p class="MsoNormal" align="center" style="margin-right: 0.75pt; text-align: center; background: white">
                      <b>
-                        <span style="">Construction Outreach Trainer in</span>
+                        <span style="">Construction Outreach Trainer</span>
                      </b>
                   </p>
-                  <p class="MsoNormal" align="center" style="margin-right: 0.75pt; text-align: center; background: white">
-                     <b>
-                        <span style="">accordance with guidelines provided by OSHA</span>
-                     </b>
-                  </p>
-                  <p class="MsoNormal" align="center" style="margin-right: 0.75pt; text-align: center; background: white">
-                     <b>
-                        <span style=""
-                           >Authorized Trainer Region II Atlantic OSHA Training Ctr.# 12-00010727</span
-                        >
-                     </b>
-                  </p>
+                 
                   <p class="MsoNormal" align="center" style="text-align: center">
                      <img width="313" height="93" id="Picture 9" src="{{ sign_image }}" />
                   </p>
                   <p class="MsoNormal" align="center" style="text-align: center">&nbsp;</p>
                   <p class="MsoNormal" align="center" style="text-align: center">&nbsp;</p>
                   <p class="MsoNormal" align="center" style="margin-right: 0.75pt; text-align: center; background: white">&nbsp;</p>
-                  <p class="MsoNormal" align="center" style="text-align: center">
-                     
-                     <img width="399" height="196" id="Picture1 10" src="https://pdhsafety.com/static/images/osha_auth.jpg" />
+                  <p class="MsoNormal" align="center" style="text-align: center;padding-bottom:20px;">
+                     <img width="200" height="200" id="Picture1 10" src="https://pdhsafety.com/static/edutim/images/logo5.png" />
                   </p>
+
+                  <p class="MsoNormal" align="center" style="text-align: center;padding-bottom:20px;font-size:10pt;">
+                    This Certificate of Training shall not imply or suggest that OSHA Outreach Training Program training was completed or will result in in individual being certified. Students are not eligible to request and/or receive an OSHA student completion card.
+                </p>
                </td>
             </tr>
          </table>
-         <p class="MsoNormal">&nbsp;</p>
+        
       </div>
    </body>
 </html>
