--- a/app_admin/templates/students/list.html
+++ b/app_admin/templates/students/list.html
@@ -1,39 +1,52 @@
 {% extends "admin_base.html" %} {% block title %} - Students {% endblock %} {% block content %}
 
-<div>
-   <div class="d-flex align-items-center justify-content-center loader mb-2">
-      <div class="spinner-border text-primary mr-2" role="status" aria-hidden="true"></div>
-      <span class="badge badge-secondary px-2"><strong>Loading...</strong></span>
+<noscript>
+   <style type="text/css">
+       .pagecontainer {display:none;}
+   </style>
+   <div class="noscriptmsg">
+   You don't have javascript enabled.  Good luck with that.
    </div>
-</div>
+</noscript>
 
-<div class="card shadow mb-4">
-   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-      <h6 class="m-0 font-weight-bold text-primary">Students</h6>
-      <div class="dropdown no-arrow">
-         <button type="button" class="btn btn-success btn-sm link-new-user" disabled><i class="fa fa-plus"></i> ADD
-            NEW</button>
+
+<div class="pagecontainer">
+   <div>
+      <div class="d-flex align-items-center justify-content-center loader mb-2">
+         <div class="spinner-border text-primary mr-2" role="status" aria-hidden="true"></div>
+         <span class="badge badge-secondary px-2"><strong>Loading...</strong></span>
       </div>
    </div>
-   <div class="card-body">
-      <div class="table-responsive">
-         <table class="table table-bordered" id="usersTable" width="100%" cellspacing="0">
-            <thead>
-               <tr>
-                  <th>#</th>
-                  <th>IMG</th>
-                  <th>UserName</th>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Phone</th>
-                  <th>Email</th>
-                  <th>Courses</th>
-               </tr>
-            </thead>
-            <tbody></tbody>
-         </table>
+   
+   <div class="card shadow mb-4">
+      <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+         <h6 class="m-0 font-weight-bold text-primary">Students</h6>
+         <div class="dropdown no-arrow">
+            <button type="button" class="btn btn-success btn-sm link-new-user" disabled><i class="fa fa-plus"></i> ADD
+               NEW</button>
+         </div>
+      </div>
+      <div class="card-body">
+         <div class="table-responsive">
+            <table class="table table-bordered" id="usersTable" width="100%" cellspacing="0">
+               <thead>
+                  <tr>
+                     <th>#</th>
+                     <th>IMG</th>
+                     <th>UserName</th>
+                     <th>First Name</th>
+                     <th>Last Name</th>
+                     <th>Phone</th>
+                     <th>Email</th>
+                     <th>Courses</th>
+                  </tr>
+               </thead>
+               <tbody></tbody>
+            </table>
+         </div>
       </div>
    </div>
+   
 </div>
 
 <div id="userModal" class="modal" tabindex="-1" role="dialog">
