--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -412,6 +412,9 @@
                <div class="col-lg-10">
                   <div class="copyright text-lg-center">
                      <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC</p>
+                     <p>
+                        <a href="https://www.linkedin.com/in/shoaibijaz/" target="_blank">DEVELOPED BY SHAH</a>
+                     </p>
                   </div>
                </div>
             </div>
