details hardcode features

--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -202,8 +202,24 @@ Money Back Guarante{% endblock %}
                 {% if object.features.first.notes %}
                 <div class="single-course-details mb-5 d-none">
                     <h4 class="course-title">Course Features:</h4>
-                    <div>
+                    {% comment %} <div>
                         {{ object.features.first.notes | safe }}
+                    </div> {% endcomment %}
+                    <div>
+                        <ul>
+                            <li>
+                                Easy to take class
+                            </li>
+                            <li>
+                                Unlimited access for two years  24/7 on any device
+                            </li>
+                            <li>
+                                Regularly updated material
+                            </li>
+                            <li>
+                                Money back guarantee
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 {% endif %}
