--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -200,7 +200,7 @@ Money Back Guarante{% endblock %}
                 </div>
 
                 {% if object.features.first.notes %}
-                <div class="single-course-details mb-5 d-none">
+                <div class="single-course-details mb-5">
                     <h4 class="course-title">Course Features:</h4>
                     {% comment %} <div>
                         {{ object.features.first.notes | safe }}
