--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -4,193 +4,234 @@
 
 {% block content %}
 
-    <section class="banner">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-12 col-lg-8">
-                    <div class="banner-content center-heading">
-                        <h1>Safety Training and Certification </h1>
-                        <a href="{% url 'courses_list' %}" class="btn btn-main">
-                            <i class="fa fa-list-ul mr-2"></i>our Courses
-                        </a>
-
+<section class="banner-left banner-4 py-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-12 col-lg-7 col-xl-7">
+                <div class="banner-content">
+                    <span class="subheading">Expert instruction</span>
+                    <h1>Safety Training and Certification</h1>
+                    <div class="form-banner">
+                        <form action="" class="form-search-banner">
+                            <input type="text" class="form-control" id="textQ2" placeholder="What do you want to learn?">
+                            <a style="padding:16px 30px;" href="#" class="btn btn-main">Search<i class="fa fa-search ml-2"></i> </a>
+                        </form>
+                    </div>
+                    <div class="banner-cat">
+                        <span>category : </span>
+                        <span>Wordpress</span>
+                        <span>Web design</span>
+                        <span>Marketing</span>
                     </div>
                 </div>
             </div>
-            <!-- / .row -->
-        </div>
-        <!-- / .container -->
-    </section>
-
-    <section class="feature-4">
-        <div class="container">
-
-            <div class="row align-items-center">
-                <div class="col-lg-12 col-md-12">
-                    <div class="section-heading center-heading">
-                        <span> Access content created by over hundreds of safety professionals nationwide </span>
-                        <h2>Training Has Never Been Easier</h2>
+            <div class="col-lg-5 col-xl-5">
+                <div class="banner-img3">
+                    <div class="img-block p-5">
+                        <img src="{% static 'edutim/images/home.jpg' %}" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
-            <div class="row align-items-center">
-                <div class="col-lg-12 col-md-12">
-                    <div class="row no-gutters">
-                        <div class="col-lg-6 col-md-6 col-xl-6">
-                            <div class="feature-item feature-style-4">
-                                <div class="feature-icon">
-                                    <i class="bi bi-badge2"></i>
-                                </div>
-                                <div class="feature-text">
-                                    <h3>
-                                        Money back guarantee
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
+        </div> <!-- / .row -->
+    </div> <!-- / .container -->
+</section>
 
-                        <div class="col-lg-6 col-md-6 col-xl-6">
-                            <div class="feature-item feature-style-4">
-                                <div class="feature-icon">
-                                    <i class="bi bi-headset"></i>
-                                </div>
-                                <div class="feature-text">
-                                    <h3>
-                                        Great value for money
- 
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
+<section class="banner d-none">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <div class="banner-content center-heading">
+                    <h1>Safety Training and Certification </h1>
+                    <a href="{% url 'courses_list' %}" class="btn btn-main">
+                        <i class="fa fa-list-ul mr-2"></i>our Courses
+                    </a>
 
-                        <div class="col-lg-6 col-md-6 col-xl-6">
-                            <div class="h20"></div>
-                            <div class="feature-item feature-style-4">
-                                <div class="feature-icon">
-                                    <i class="bi bi-rocket2"></i>
-                                </div>
-                                <div class="feature-text">
-                                    <h3>
-                                        1yr access 24/7 on all devices
-
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    
-    {% if courses.count > 0 %}
-        <section class="section-padding popular-course-list2 pb-0 mb-3">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="section-heading">
-                            <span class="subheading">Top Trending Courses</span>
-                            <h3>BEST SELLING COURSES</h3>
-                        </div>
-                    </div>
+        <!-- / .row -->
+    </div>
+    <!-- / .container -->
+</section>
 
-                    <div class="col-lg-6">
-                        <div class="course-btn text-lg-right">
-                            <a href="/courses" class="btn btn-main">
-                                <i class="fa fa-store mr-2"></i>All Courses</a>
-                        </div>
-                    </div>
+<section class="feature-4">
+    <div class="container">
+
+        <div class="row align-items-center">
+            <div class="col-lg-12 col-md-12">
+                <div class="section-heading center-heading">
+                    <span> Access content created by over hundreds of safety professionals nationwide </span>
+                    <h2>Training Has Never Been Easier</h2>
                 </div>
-
-                <div class="row">
-
-                    {% for course in courses %}
-                        {% with subject=course.subject %}
-                        <div class="col-lg-6 col-md-6 course-item">
-
-                            <input type="hidden" name="id" value="{{ course.id }}"/>
-                            <input type="hidden" name="title" value="{{ course.title }}"/>
-                            <input type="hidden" name="subject" value="{{ subject }}"/>
-                            <input type="hidden" name="price" value="{{ course.price }}"/>
-                            <input type="hidden" name="discounted_price" value="{{ course.discounted_price }}"/>
-                            <input type="hidden" name="modules" value="{{ course.total_modules }}"/>
-
-
-                            <div class="course-block course-list-item">
-                                <div class="row align-items-center">
-                                    <div class="col-lg-4">
-                                        <div class="course-img">
-                                            <a href="{% url 'course_detail' course.slug %}">
-                                                <img width="146" height="182" data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg" alt="image" class="lazy img-fluid rounded-0"/>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-8">
-                                        <div class="course-content">
-                                            <div class="course-price ">
-                                                {% if course.is_free %}
-                                                    Free Course
-                                                {% elif course.discounted_price > 0 %}
-                                                    ${{ course.discounted_price }}
-                                                    <span class="del">${{ course.price }}</span>
-                                                {% else %}
-                                                    ${{ course.price }}
-                                                {% endif %}
-                                            </div>
-
-                                            <h4>
-                                                <a href="{% url 'course_detail' course.slug %}">
-                                                    {{ course.title }}
-                                                </a>
-                                            </h4>
-                                            <div class="rating">
-                                                <p>{{ subject }}</p>
-                                            </div>
-
-                                            <div class="course-footer d-lg-flex align-items-center justify-content-between">
-                                                <div class="course-meta">
-                                                    {% if course.features.first.duration %}
-                                                        <span class="course-student">
-                                       
-                                                            {{ course.features.first.duration }}</span>
-                                                    {% endif %}
-                                                    <span class="course-duration">
-      
-                                                        {{ course.total_modules }}
-                                                        Modules</span>
-                                                </div>
-
-                                                <div class="buy-btn">
-                                                    <a href="{% url 'course_detail' course.slug %}" class="btn btn-main-2 btn-small">Details</a>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </div>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-lg-12 col-md-12">
+                <div class="row no-gutters">
+                    <div class="col-lg-6 col-md-6 col-xl-6">
+                        <div class="feature-item feature-style-4">
+                            <div class="feature-icon">
+                                <i class="bi bi-badge2"></i>
+                            </div>
+                            <div class="feature-text">
+                                <h3>
+                                    Money back guarantee
+                                </h3>
                             </div>
                         </div>
-                        {% endwith %}
-                    {% endfor %}
+                    </div>
 
+                    <div class="col-lg-6 col-md-6 col-xl-6">
+                        <div class="feature-item feature-style-4">
+                            <div class="feature-icon">
+                                <i class="bi bi-headset"></i>
+                            </div>
+                            <div class="feature-text">
+                                <h3>
+                                    Great value for money
 
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6 col-xl-6">
+                        <div class="h20"></div>
+                        <div class="feature-item feature-style-4">
+                            <div class="feature-icon">
+                                <i class="bi bi-rocket2"></i>
+                            </div>
+                            <div class="feature-text">
+                                <h3>
+                                    1yr access 24/7 on all devices
+
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
-    {% endif %}
+        </div>
+    </div>
+</section>
 
-    <section class="team section-padding bg-grey py-3 mb-4">
-        <div class="container">
-
-            <div class="row">
-                <div class="col text-center">
-                    <img class="lazy img-fluid" data-src="{% static 'images/money_back.png' %}" width="400" height="293" alt="money back"></div>
+{% if courses.count > 0 %}
+<section class="section-padding popular-course-list2 pb-0 mb-3">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div class="section-heading">
+                    <span class="subheading">Top Trending Courses</span>
+                    <h3>BEST SELLING COURSES</h3>
                 </div>
             </div>
-        </section>
 
-    {% endblock %}
+            <div class="col-lg-6">
+                <div class="course-btn text-lg-right">
+                    <a href="/courses?is_premium=1" class="btn btn-main">
+                        <i class="fa fa-store mr-2"></i>All Courses</a>
+                </div>
+            </div>
+        </div>
 
-    {% block scripts %}
-        <script></script>
-    {% endblock %}
+        <div class="row">
+
+            {% for course in courses %}
+            {% with subject=course.subject %}
+            <div class="col-lg-6 col-md-6 course-item">
+
+                <input type="hidden" name="id" value="{{ course.id }}" />
+                <input type="hidden" name="title" value="{{ course.title }}" />
+                <input type="hidden" name="subject" value="{{ subject }}" />
+                <input type="hidden" name="price" value="{{ course.price }}" />
+                <input type="hidden" name="discounted_price" value="{{ course.discounted_price }}" />
+                <input type="hidden" name="modules" value="{{ course.total_modules }}" />
+
+
+                <div class="course-block course-list-item">
+                    <div class="row align-items-center">
+                        <div class="col-lg-4">
+                            <div class="course-img">
+                                <a href="{% url 'course_detail' course.slug %}">
+                                    <img width="146" height="182"
+                                        data-src="{% static 'edutim/images/courses/course-' %}{% random_int 1 12 %}.jpg"
+                                        alt="image" class="lazy img-fluid rounded-0" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="course-content">
+                                <div class="course-price ">
+                                    {% if course.is_free %}
+                                    Free Course
+                                    {% elif course.discounted_price > 0 %}
+                                    ${{ course.discounted_price }}
+                                    <span class="del">${{ course.price }}</span>
+                                    {% else %}
+                                    ${{ course.price }}
+                                    {% endif %}
+                                </div>
+
+                                <h4>
+                                    <a href="{% url 'course_detail' course.slug %}">
+                                        {{ course.title }}
+                                    </a>
+                                </h4>
+                                <div class="rating">
+                                    <p>{{ subject }}</p>
+                                </div>
+
+                                <div class="course-footer d-lg-flex align-items-center justify-content-between">
+                                    <div class="course-meta">
+                                        {% if course.features.first.duration %}
+                                        <span class="course-student">
+
+                                            {{ course.features.first.duration }}</span>
+                                        {% endif %}
+                                        <span class="course-duration">
+
+                                            {{ course.total_modules }}
+                                            Modules</span>
+                                    </div>
+
+                                    <div class="buy-btn">
+                                        <a href="{% url 'course_detail' course.slug %}"
+                                            class="btn btn-main-2 btn-small">Details</a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endwith %}
+            {% endfor %}
+
+
+        </div>
+    </div>
+</section>
+{% endif %}
+
+<section class="team section-padding bg-grey py-3 mb-4">
+    <div class="container">
+
+        <div class="row">
+            <div class="col text-center">
+                <img class="lazy img-fluid" data-src="{% static 'images/money_back.png' %}" width="400" height="293"
+                    alt="money back">
+            </div>
+        </div>
+    </div>
+</section>
+
+{% endblock %}
+
+{% block scripts %}
+<script>
+    $(document).ready(function() {
+        autocomplete(document.getElementById("textQ2"), []);
+    })
+</script>
+{% endblock %}
