--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -87,6 +87,28 @@
 
 <body id="top-header">
    <header>
+
+      <div id="discountHeader" class="header-top py-3 alert alert-dismissible fade show" role="alert" style="background: #eceb98;">
+         <div class="container">
+
+            <div class="text-dark text-center " >
+             <div>
+               <strong>Sales ending soon!</strong> | Courses on Safety Training (and more) from 
+               <strong>$11.99</strong>.
+             </div>
+               <div>
+                  <strong id="">Ends in 
+                     <span id="disountTime">00 00 00.</span>
+                  </strong>
+               </div>
+
+               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+         </div>
+      </div>
+
       <div class="header-top">
          <div class="container">
             <div class="row align-items-center">
