top header margin

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -88,7 +88,7 @@
 <body id="top-header">
    <header>
 
-      <div id="discountHeader" class="header-top py-3 alert alert-dismissible fade show" role="alert" style="background: #eceb98;">
+      <div id="discountHeader" class="mb-0 header-top py-3 alert alert-dismissible fade show" role="alert" style="background: #eceb98;">
          <div class="container">
 
             <div class="text-dark text-center " >
