--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -13,11 +13,18 @@
                     <h1>Safety Training and Certification</h1>
                     <div class="form-banner">
                         <form action="" class="form-search-banner">
-                            <input type="text" class="form-control" id="textQ2" placeholder="What do you want to learn?">
-                            <a style="padding:16px 30px;" href="#" class="btn btn-main">Search<i class="fa fa-search ml-2"></i> </a>
+                            <input type="text" class="form-control" id="textQ2"
+                                placeholder="What do you want to learn?">
+                            <a style="padding:16px 30px;" href="#" class="btn btn-main">Search<i
+                                    class="fa fa-search ml-2"></i> </a>
                         </form>
                     </div>
-                   
+                    <div class="banner-cat">
+                        <span>
+                            <a class="text-white" href="#whyyouneed">Benefits of Online Construction Safety Certification?</a>
+                        </span>
+                      
+                    </div>
                 </div>
             </div>
             <div class="col-lg-5 col-xl-5">
@@ -191,6 +198,147 @@
 </section>
 {% endif %}
 
+<section class="blog-3 pb-100" id="whyyouneed">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <div class="section-heading center-heading">
+                    <h3 class="mb-3">Build Your Future on a Solid Foundation: Construction Safety Training &
+                        Certification Online</h3>
+
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <p>
+                    The construction industry thrives on a skilled workforce, but safety is paramount. At
+
+                    NYC Construction Safety Training, we understand the importance of equipping construction
+                    professionals with the knowledge and skills to navigate the unique challenges of a construction
+                    site. That's why we offer a comprehensive suite of online construction safety training and
+                    certification programs, designed for your busy schedule and career goals.
+                </p>
+                <p>
+                    <strong>
+                        Why Choose Online Construction Safety Training?
+                    </strong>
+                </p>
+
+                <ul>
+                    <li>
+                        <strong>Convenience:</strong> Learn at your own pace, anytime, anywhere with an internet
+                        connection.
+                    </li>
+                    <li>
+                        <strong>Flexibility:</strong> Fit training around your work schedule – complete modules during
+                        breaks, evenings, or weekends.
+                    </li>
+                    <li>
+                        <strong>
+                            Cost-effective:
+                        </strong> Avoid travel and classroom expenses associated with traditional training methods.
+                    </li>
+                    <li>
+                        <strong>
+                            Engaging Learning:
+                        </strong> Our interactive online courses feature multimedia content, quizzes, and real-world
+                        scenarios to keep you engaged.
+                    </li>
+                    <li>
+
+
+                        <strong>Nationally Recognized Certifications:</strong> Earn industry-recognized certifications
+                        that validate your safety expertise and enhance your resume.
+                    </li>
+                </ul>
+
+                <p class="text-center py-2">
+                    <strong>Our Comprehensive Course Offerings</strong>
+                </p>
+                <p>
+                    We offer a variety of online construction safety training programs to meet your specific needs. Here
+                    are some of our most popular courses:
+                </p>
+
+                <div class="mb-2" id="subjectslistseop">
+
+                    <a href="/course/subject/asp-exam-prep/" class="badge badge-primary px-2 mx-2">ASP Exam Prep</a><a
+                        href="/course/subject/chst-exam-prep/" class="badge badge-primary px-2 mx-2">CHST Exam
+                        Prep</a><a href="/course/subject/competent-person-training/"
+                        class="badge badge-primary px-2 mx-2">Competent Person Training</a><a
+                        href="/course/subject/csp-exam-prep/" class="badge badge-primary px-2 mx-2">CSP Exam Prep</a><a
+                        href="/course/subject/em-385-training/" class="badge badge-primary px-2 mx-2">EM 385
+                        Training</a><a href="/course/subject/em-385-1-1-training/"
+                        class="badge badge-primary px-2 mx-2">EM-385-1-1 Training</a><a
+                        href="/course/subject/epa-hazwoper-training/" class="badge badge-primary px-2 mx-2">EPA HAZWOPER
+                        Training</a><a href="/course/subject/fall-protection-training-online/"
+                        class="badge badge-primary px-2 mx-2">Fall Protection Training</a><a
+                        href="/course/subject/fall-protection-training-free/" class="badge badge-primary px-2 mx-2">Fall
+                        Protection Training Free</a><a href="/course/subject/free-hazcom-training/"
+                        class="badge badge-primary px-2 mx-2">Free HAZCOM Training</a><a
+                        href="/course/subject/free-online-construction-safety-training-courses/"
+                        class="badge badge-primary px-2 mx-2">Free Online Construction Safety Training Courses</a><a
+                        href="/course/subject/free-osha-certification/" class="badge badge-primary px-2 mx-2">Free OSHA
+                        Certification</a><a href="/course/subject/free-osha-classes-online/"
+                        class="badge badge-primary px-2 mx-2">Free OSHA Classes Online</a><a
+                        href="/course/subject/free-safety-training-online/" class="badge badge-primary px-2 mx-2">Free
+                        Safety Training</a><a href="/course/subject/free-scaffold-training/"
+                        class="badge badge-primary px-2 mx-2">Free Scaffold Training</a><a
+                        href="/course/subject/HAZWOPER-training-online/" class="badge badge-primary px-2 mx-2">HAZWOPER
+                        Training Online</a><a href="/course/subject/osha-competent-person-training/"
+                        class="badge badge-primary px-2 mx-2">OSHA Competent Person Training</a><a
+                        href="/course/subject/osha-hazwoper-certification/" class="badge badge-primary px-2 mx-2">OSHA
+                        HAZWOPER Certification</a><a href="/course/subject/osha-scaffold-training/"
+                        class="badge badge-primary px-2 mx-2">OSHA Scaffold Training</a><a
+                        href="/course/subject/permit-required-confined-space-training/"
+                        class="badge badge-primary px-2 mx-2">Permit Required Confined Space Training</a><a
+                        href="/course/subject/supported-scaffold-certification/"
+                        class="badge badge-primary px-2 mx-2">Supported Scaffold Certification</a><a
+                        href="/course/subject/supported-scaffold-training/"
+                        class="badge badge-primary px-2 mx-2">Supported Scaffold Training</a><a
+                        href="/course/subject/suspended-scaffold-training/"
+                        class="badge badge-primary px-2 mx-2">Suspended Scaffold Training</a><a
+                        href="/course/subject/suspended-scaffold-training-online/"
+                        class="badge badge-primary px-2 mx-2">Suspended Scaffold Training Online</a><a
+                        href="/course/subject/swing-stage-certification/" class="badge badge-primary px-2 mx-2">Swing
+                        Stage Certification</a><a href="/course/subject/swing-staging-training/"
+                        class="badge badge-primary px-2 mx-2">Swing Staging Training</a><a
+                        href="/course/subject/trenching-and-excavation-safety/"
+                        class="badge badge-primary px-2 mx-2">Trenching and Excavation Safety</a>
+                </div>
+
+                <p class="text-center">
+                    <strong>Benefits</strong>
+                </p>
+                <ul>
+
+                    <li><strong>
+                        Increased Earning Potential: 
+                    </strong> Safety certifications can lead to higher wages and better job
+                        opportunities in the construction industry.</li>
+                    <li><strong>
+                            Career Advancement:
+                        </strong> Certifications demonstrate your commitment to safety and open doors to supervisory or
+                        management positions.</li>
+                    <li>
+                        <strong>
+                            Enhanced Safety Culture:
+                        </strong> A well-trained workforce reduces workplace accidents and fosters a culture of safety on construction sites.
+                    </li>
+
+
+                </ul>
+
+            </div>
+
+
+        </div>
+    </div>
+</section>
+
 <section class="team section-padding bg-grey py-3 mb-4">
     <div class="container">
 
@@ -207,7 +355,7 @@
 
 {% block scripts %}
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         autocomplete(document.getElementById("textQ2"), []);
     })
 </script>
