--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -4,9 +4,9 @@
 {% load course %}
 {% load cache %}
 
-{% block title %}Best Price Online - {{ object.title }} Course | pdhsafety.com {% endblock %}
+{% block title %} {{ object.title }} Course | pdhsafety.com {% endblock %}
 
-{% block meta_desc %} Best Price Online {{ object.subject }}, Access 24/7 On All Devices. Easy To Take
+{% block meta_desc %} Best Price Online {{ object.subject }}, Access 24/7 On All Devices. Easy To Take,
 Money Back Guarante{% endblock %}
 
 {% block meta_keywords %}
