home page headings

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -157,7 +157,7 @@
                         <img src="{% static 'edutim/images/logo100.png' %}" width="100" height="100"
                            alt="Make Safety Training Happen" class="img-fluid" />
                      </a>
-                     <h3>Make Safety Training Happen</h3>
+                     <span class="top-logo-tagline">Make Safety Training Happen</span>
                   </div>
                </div>
             </div>
