--- a/static/edutim/combine.css
+++ b/static/edutim/combine.css
@@ -92,3 +92,9 @@ and (min-resolution: 192dpi) {
     background-color: DodgerBlue !important;
     color: #ffffff;
   }
+
+  .top-logo-tagline {
+    font-size: 28px;
+    font-weight: 700;
+    color: #07294d;
+  }
