--- a/static/edutim/css/style.css
+++ b/static/edutim/css/style.css
@@ -5751,3 +5751,9 @@ Home New 8
     font-size: 16px;
     border-radius: 12px;
   }
+
+  .top-logo-tagline {
+    font-size: 28px;
+    font-weight: 700;
+    color: #07294d;
+  }
