--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -9,7 +9,7 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-   <meta name="description" content="{% block meta_desc %} 100% Online Best Prices-Money Back Guarantee-Live Accredited-Access 24/7 On All Devices
+   <meta name="description" content="{% block meta_desc %}, 100% online training for construction and general industry. We provide free and bulk discounts.
          {% endblock %}" />
    <meta name="author" content="{% block meta_author %}{% endblock %}" />
    <meta name="keywords" content="{% block meta_keywords %}{% endblock %}" />
